# repo-chat

./: .gitignore  IDEA.md  LICENSE  PROMPT.md  README.md  TODO.md  pyproject.toml  test_full_pipeline.py  test_search.py
frontend/: app.js  index.html  style.css
repochat/: __init__.py  chat.py  chunker.py  cli.py  embed.py  indexer.py  llm.py  models.py  parser.py  search.py  server.py  storage.py  symbols.py
